hphp/test/zend/good/tests/classes/interface_instantiate.php.expectf

Fatal error: Cannot instantiate interface if_a in %s/interface_instantiate.php on line 7
